[gd_scene load_steps=3 format=3 uid="uid://ccvum77ne47ov"]

[ext_resource type="Script" path="res://Trade/Script/TradeUI/goods_trade_details.gd" id="1_2xkig"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3kst5"]
bg_color = Color(0.129412, 0.129412, 0.129412, 1)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(0.384314, 0.384314, 0.384314, 0.929412)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[node name="GoodsTradeDetails" type="CenterContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 6
size_flags_vertical = 6
script = ExtResource("1_2xkig")

[node name="PanelContainer" type="PanelContainer" parent="."]
clip_contents = true
custom_minimum_size = Vector2(600, 300)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_3kst5")

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2

[node name="CenterContainer" type="CenterContainer" parent="PanelContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2

[node name="GoodsName" type="Label" parent="PanelContainer/VBoxContainer/CenterContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "物品名称"

[node name="VBox" type="VBoxContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="CenterContainer" type="CenterContainer" parent="PanelContainer/VBoxContainer/VBox"]
layout_mode = 2
size_flags_vertical = 3

[node name="GoodsNumber" type="Label" parent="PanelContainer/VBoxContainer/VBox/CenterContainer"]
layout_mode = 2
text = "物品数量"

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/VBoxContainer/VBox"]
layout_mode = 2
size_flags_vertical = 3

[node name="Control" type="Control" parent="PanelContainer/VBoxContainer/VBox/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="NumberDown" type="Button" parent="PanelContainer/VBoxContainer/VBox/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "—"

[node name="CenterContainer" type="CenterContainer" parent="PanelContainer/VBoxContainer/VBox/HBoxContainer"]
custom_minimum_size = Vector2(400, 0)
layout_mode = 2

[node name="NumberScrollBar" type="HScrollBar" parent="PanelContainer/VBoxContainer/VBox/HBoxContainer/CenterContainer"]
custom_minimum_size = Vector2(350, 10)
layout_mode = 2
min_value = 1.0
step = 1.0
value = 1.0

[node name="NumberUp" type="Button" parent="PanelContainer/VBoxContainer/VBox/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "+"

[node name="Control2" type="Control" parent="PanelContainer/VBoxContainer/VBox/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="CenterContainer2" type="CenterContainer" parent="PanelContainer/VBoxContainer/VBox"]
layout_mode = 2
size_flags_vertical = 3

[node name="NumberPrice" type="Label" parent="PanelContainer/VBoxContainer/VBox/CenterContainer2"]
layout_mode = 2
text = "物品总价"

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 80)
layout_mode = 2

[node name="Control" type="Control" parent="PanelContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="CenterContainer" type="CenterContainer" parent="PanelContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="DetailsCancel" type="Button" parent="PanelContainer/VBoxContainer/HBoxContainer/CenterContainer"]
custom_minimum_size = Vector2(100, 50)
layout_mode = 2
text = "取消"

[node name="Control2" type="Control" parent="PanelContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="CenterContainer2" type="CenterContainer" parent="PanelContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="DetailsTrade" type="Button" parent="PanelContainer/VBoxContainer/HBoxContainer/CenterContainer2"]
custom_minimum_size = Vector2(100, 50)
layout_mode = 2
text = "交易"

[node name="Control3" type="Control" parent="PanelContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Popup" type="PanelContainer" parent="."]
visible = false
custom_minimum_size = Vector2(200, 0)
layout_mode = 2

[node name="CenterContainer" type="CenterContainer" parent="Popup"]
custom_minimum_size = Vector2(100, 50)
layout_mode = 2

[node name="Label" type="Label" parent="Popup/CenterContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.367788, 0.300217, 1)
text = "!!交易失败，现金不足!!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Timer" type="Timer" parent="Popup"]
one_shot = true

[connection signal="pressed" from="PanelContainer/VBoxContainer/VBox/HBoxContainer/NumberDown" to="." method="_on_number_down_pressed"]
[connection signal="value_changed" from="PanelContainer/VBoxContainer/VBox/HBoxContainer/CenterContainer/NumberScrollBar" to="." method="_on_number_scroll_bar_value_changed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/VBox/HBoxContainer/NumberUp" to="." method="_on_number_up_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/HBoxContainer/CenterContainer/DetailsCancel" to="." method="_on_details_cancel_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/HBoxContainer/CenterContainer2/DetailsTrade" to="." method="_on_details_trade_pressed"]
[connection signal="draw" from="Popup" to="." method="_on_popup_draw"]
[connection signal="timeout" from="Popup/Timer" to="." method="_on_timer_timeout"]
